@@ -1,0 +1,46 @@
+properties{
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  min_layer = 0,
+  max_layer = 2,
+  tileset = "castle",
+}
+
+tile{
+  layer = 0,
+  x = 0,
+  y = 0,
+  width = 320,
+  height = 240,
+  pattern = "3",
+}
+
+destination{
+  layer = 0,
+  x = 24,
+  y = 29,
+  direction = 1,
+}
+
+switch{
+  name = "walkable_switch",
+  layer = 0,
+  x = 48,
+  y = 16,
+  subtype = "walkable",
+  needs_block = false,
+  inactivate_when_leaving = false,
+}
+
+switch{
+  name = "solid_switch",
+  layer = 0,
+  x = 80,
+  y = 16,
+  subtype = "solid",
+  needs_block = false,
+  inactivate_when_leaving = false,
+}
+
